syntax = "proto3";
package ai.floedb.floecat.query;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.query.rpc";

/**
 * Engine-specific rule metadata.
 *
 * For all engines (Floe, Postgres, Trino, Spark, â€¦), the payload is opaque:
 * Floecat never interprets it.
 */
message EngineSpecific {

  // --- Applicability rules (PBtxt only) ---
  string engine_kind = 10;   // "floe-demo", "postgres", ...
  string min_version = 11;   // min engine version (inclusive)
  string max_version = 12;   // max engine version (inclusive)

  // --- Payload for engine-specific data ---
  // e.g. "floe.function+proto", "postgres.collation+json", "trino.cast+json"
  string payload_type = 20;

  // Serialized bytes in any format the plugin chooses.
  bytes payload = 21;

  // --- Generic metadata ---
  map<string,string> properties = 100;
}